--- a/resources/sass/parts/global.scss
+++ b/resources/sass/parts/global.scss
@@ -8,7 +8,7 @@
     min-height: 100vh;
     padding: 20px 0;
     width: 80%;
-    @media screen and (max-width: $small) {
+    @media screen and (max-width: $medium) {
         width: 100%;
     }
 }
