--- a/resources/sass/parts/summary.scss
+++ b/resources/sass/parts/summary.scss
@@ -78,7 +78,7 @@
     color: #fff;
 
     th, td {
-        padding: 5px 10px;
+        padding: 5px;
         text-align: center;
         @media screen and (max-width: $small) {
             padding: 1px;
